--- a/index.html
+++ b/index.html
@@ -8,35 +8,35 @@
         padding: 20px;
     }
     </style>
-    <script type="text/javascript" src="./jquery-2.1.4.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./foundation.min.css"> 
 </head>
 
 <body>
-    <div>
-        <h2 id="getDataDisplay"></h2>
-        <button id="GetData" onclick="GetData()">Get Data</button>
+    <div class="row">
+        <div class="panel">
+            <h2 id="getDataDisplay"></h2>
+            <button id="GetData" class="round button">Get AJAX Data</button>
+        </div>
     </div>
+    <!-- This is just a functionality for AJAX GET -->
+    <script type="text/javascript" src="./jquery-2.1.4.min.js"></script>
     <script type="text/javascript">
-    function GetData() {
-
+    $('#GetData').click(function() {
         $.ajax({
             type: 'GET',
             url: 'http://rest.learncode.academy/api/johnbob/friends',
             success: function(data) {
                 console.log("I have friends!", data); //returns all of johnbob's friends
                 var variable = '';
-                data.forEach(function(item){
-                	variable = variable + item.name + ' <br/>';
-                	console.log(variable);
-                     $('#getDataDisplay').html(variable);
-                     $('#GetData').hide();
+                data.forEach(function(item) {
+                    variable += /*variable + */ item.name + ' <br/>';
+                    // console.log(variable);
+                    $('#getDataDisplay').html(variable);
+                    $('#GetData').hide();
                 })
-                // $('#getDataDisplay').html(variable)
-                // $('#getDataDisplay').html(JSON.stringify(data[0].name));
             }
-        });
-    });
- 
+        }); //Closing AJAX GET requiest. 
+    }); // Closing click function.
     </script>
 </body>
 
